--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19-pre1
-yarn_mappings=1.19-pre1+build.1
-loader_version=0.14.5
+minecraft_version=1.19-rc2
+yarn_mappings=1.19-rc2+build.1
+loader_version=0.14.6
 # Mod Properties
 mod_version=1.0-SNAPSHOT
 maven_group=firemuffin303
 archives_base_name=WildFireFly
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.52.4+1.19
+fabric_version=0.55.0+1.19
