--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19
-yarn_mappings=1.19+build.1
-loader_version=0.14.6
+minecraft_version=1.19.1-rc1
+yarn_mappings=1.19.1-rc1+build.4
+loader_version=0.14.8
 # Mod Properties
 mod_version=1.1-release
 maven_group=firemuffin303
 archives_base_name=WildFireFly
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.55.1+1.19
+fabric_version=0.56.3+1.19
