--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
+    maven {	url "https://maven.terraformersmc.com/" }
+    maven { url "https://maven.shedaniel.me/" }
     // Add repositories to retrieve artifacts from in here.
     // You should only use this when depending on other mods because
     // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
@@ -22,6 +24,12 @@ dependencies {
 
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}", {
+        exclude module: 'fabric-api'
+    }
+    modApi("me.shedaniel.cloth:cloth-config-fabric:7.0.73") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
 }
 
 processResources {
