--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,8 @@ minecraft_version=1.19
 yarn_mappings=1.19+build.1
 loader_version=0.14.6
 # Mod Properties
-mod_version=1.1-release
+mod_version=1.2-release
+modmenu_version=3.2.2
 maven_group=firemuffin303
 archives_base_name=WildFireFly
 # Dependencies
