--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}", {
         exclude module: 'fabric-api'
     }
-    modApi("me.shedaniel.cloth:cloth-config-fabric:7.0.73") {
+    modApi("me.shedaniel.cloth:cloth-config-fabric:${project.clothconfig_version}") {
         exclude(group: "net.fabricmc.fabric-api")
     }
 }
