--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,15 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19
-yarn_mappings=1.19+build.1
-loader_version=0.14.6
+minecraft_version=1.19.2
+yarn_mappings=1.19.2+build.20
+loader_version=0.14.9
 # Mod Properties
-mod_version=1.2-release
+mod_version=1.19.x-1.2.1-release
 modmenu_version=3.2.2
+clothconfig_version=7.0.73
 maven_group=firemuffin303
 archives_base_name=WildFireFly
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.55.1+1.19
+fabric_version=0.62.0+1.19.2
